Created endpoint that returns closest bus on route
